# configurator_metamodel

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.py  verify_refactor.py
.github/workflows/: conventionalpr.yml  main.yml  release.yml
flamapy/metamodels/configurator_metamodel/models/: __init__.py  configurator_metamodel.py  configurator_model.py
flamapy/metamodels/configurator_metamodel/operations/: __init__.py  configure.py
flamapy/metamodels/configurator_metamodel/solver/: __init__.py  backend.py  pysat_backend.py  z3_backend.py
flamapy/metamodels/configurator_metamodel/transformation/: __init__.py  fm_to_configurator.py  fm_to_configurator_pre_order.py
resources/models/uvl_models/: Pizzas.uvl  Pizzas_typed.uvl
tests/: _helpers.py  conftest.py  test_configurator.py  test_configurator_model.py  test_configure.py  test_integration.py  test_solver_backends.py  test_transformations.py
